--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
-body {
+h1 {
+  color: skyblue;
+  text-decoration: white way 1px overline underline;
+}
 
+body {
+  color: purple;
+  text-transform: uppercase;
+  font size 200%;
+  background-color: lavender
 }
