--- a/style.css
+++ b/style.css
@@ -9,3 +9,35 @@ body {
   font size 200%;
   background-color: lavender
 }
+img:hover {
+  width 50%
+}
+
+nav {
+  list-style-type: none;
+  background-color: #100;
+  width: 100%;
+  overflow: hidden;
+  position: fixed;
+  left: 0;
+  top: 0;
+  margin: 0;
+}
+.navli {
+  float: left;
+}
+
+.navli a {
+  display: block;
+  color: purple;
+  text-decoration: none;
+  padding: 15px 100px;
+}
+
+.navli a:hover {
+  background-color: purple;
+  color: lavender;
+}
+li {
+  list-style-position: inside;
+}
