--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ h1 {
 body {
   color: purple;
   text-transform: uppercase;
+  text-align: center;
   font size 200%;
   background-color: lavender
 }
